# lkd

./: CMakeLists.txt  Makefile  hello.c  readme.md
character-hello/: CMakeLists.txt  Kbuild  character-hello.c
cmake/: FindKernelHeaders.cmake
hello/: CMakeLists.txt
